# arm_driver-ws

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/arm_moveit_config/share/ament_index/resource_index/package_run_dependencies/: arm_moveit_config
install/arm_moveit_config/share/arm_moveit_config/: local_setup.sh  package.sh  package.xml
install/arm_moveit_config/share/arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  my-robot-urdf.srdf
install/arm_moveit_config/share/arm_moveit_config/launch/: demo.launch.py  move_group.launch.py
install/perseus_arm/share/perseus_arm/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/perseus_arm/share/perseus_arm/assets/: bottom_servo_plate.stl  shoulder.stl
install/perseus_arm/share/perseus_arm/cmake/: perseus_armConfig.cmake
install/perseus_arm/share/perseus_arm/urdf/: robot.urdf
log/: latest_build
src/arm_moveit_config/: .setup_assistant
src/arm_moveit_config/config/: joint_limits.yaml  my-robot-urdf.ros2_control.xacro  my-robot-urdf.srdf  my-robot-urdf.urdf.xacro  ros2_controllers.yaml
src/arm_moveit_config/launch/: moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/perseus_arm/: CMakeLists.txt  package.xml
src/perseus_arm/assets/: arm_round.part  arm_round.stl  base.part  base.stl  bottom_servo_plate.part  compound.part  compound.stl  piece.part  piece.stl  shoulder.part  top_servo_plate.part  top_servo_plate.stl  upper_arm.part  upper_arm.stl
