<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perseus_arm</name>
  <version>0.0.0</version>
  <description>Perseus robotic arm hardware driver and control package</description>
  <maintainer email="dtark16@gmail.com">maxim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- Hardware interface for ros2_control -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <!-- Pigpio for servo control -->
  <depend>libpigpiod-if2-dev</depend>
  <exec_depend>pigpio</exec_depend>

  <!-- Runtime dependencies for ros2_control (loaded by launch files) -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>